# mattermake

./: .gitignore  README.md  pyproject.toml
configs/: crystals_prepare.yaml  data_preparation.yaml  data_preparation_slice.yaml  data_preparation_structure.yaml  generate.yaml  generate_autoencoder.yaml  generate_crystals.yaml  generate_slice.yaml  prepare_crystal_data.yaml  prepare_hct_data.yaml  train.yaml  train_autoencoder.yaml  train_crystal_transformer.yaml  train_crystals_vae.yaml  train_gpt.yaml  train_hct.yaml  train_hierarchical_crystal_transformer.yaml  train_modular_hct.yaml  update_hierarchical_crystal_transformer.yaml  validate_autoencoder.yaml
configs/callbacks/: default.yaml  early_stopping.yaml  epoch_summary.yaml  model_checkpoint.yaml
configs/data/: crystal.yaml  crystal_datamodule.yaml  crystal_sequence.yaml  hct.yaml  hct_sequence.yaml  slice.yaml  vae.yaml  wyckoff_dataset.yaml
configs/experiment/: hct.yaml  modular_hct_exp.yaml
configs/logger/: wandb.yaml
configs/model/: continuous_crystal_transformer.yaml  cross_attention_gpt.yaml  crystal_autoencoder.yaml  crystal_transformer.yaml  gpt.yaml  hct.yaml  hierarchical_crystal_transformer.yaml  mhct.yaml  modular_hct.yaml  vae.yaml
configs/paths/: default.yaml
configs/trainer/: ddp.yaml  ddp_continuous.yaml  default.yaml
experiments/: evaluate_crystal_transformer.py  evaluate_slices.py  generate.py  generate.sbatch  generate_crystals.py  generate_from_autoencoder.py  generate_slice.py  hct_data_prepare.py  prepare.py  prepare_crystals.sbatch  prepare_hct_data.py  prepare_hct_data.sh  prepare_slices.py  prepare_slics.py  prepare_structures.py  prepare_structures.sbatch  scratch.py  submit_prepare_crystal_data.sh  submit_train_crystal_transformer.sh  test_hct_data_loading.py  train.py  train.sbatch  train_autoencoder.py  train_autoencoder.sbatch  train_crystal_transformer.py  train_crystals.py  train_crystals.sbatch  train_diffusion.sbatch  train_diffusion_model.py  train_gpt.py  train_hct.py  train_hct.sh  train_hierarchical_crystal_transformer.py  train_hierarchical_crystal_transformer.sh  train_mhct.py  train_modular_hct.py  update_hierarchical_crystal_transformer.sh  validate_autoencoder.py  validate_autoencoder.sbatch
experiments/gpt_tests/: generate_slice.sbatch  prepare_crystals.py  prepare_crystals.sbatch  prepare_slices.py  scratch.py  submit_prepare_crystal_data.sh  train_gpt.py  train_gpt.sbatch
experiments/hct_tests/: MAPI.cif  Sb2Te3.cif  generate_crystals.py  (+9 more)
scripts/: clean_wyckoff_data.py  create_dataset.py  generate_from_embeddings.py  generate_structures.py  validate_dataset.py
tests/: test_cross_attention.py
(+127 files in other folders)
